src/test/ui/slice-mut-2.stderr
error[E0596]: cannot borrow immutable borrowed content `*x` as mutable
  --> $DIR/slice-mut-2.rs:7:18
   |
LL |     let _ = &mut x[2..4];
   |                  ^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
